inou/prp/tests/errors/attribute_initial_read_renamed.prp
/*
:name: attribute_initial_read_renamed
:type: error
:error: not a Pyrope attribute name
:help: use `init`
*/

mut x = 0
const y = x.[initial]  // locate_error_here
